# opengl-rust

./: Cargo.toml  README.md  build.rs
assets/shaders/: triangle.frag  triangle.vert
lib/gl/: Cargo.toml  build.rs
lib/gl/src/: lib.rs
src/: main.rs  polys.rs  render_gl.rs  resources.rs  triangle.frag  triangle.vert
src/render_gl/: buffer.rs  data.rs  mod.rs  shader.rs
