[package]
name = "opengl-rust"
version = "0.1.0"
edition = "2021"
authors = ["Tom Hightower <Tom.hightower356@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { version = "0.35.2", features = ["bundled", "static-link"] }
gl = { path = "lib/gl" }
failure = "0.1.8"

[build-dependencies]
walkdir = "2.3.2"

[features]
gl_debug = ["gl/debug"]
